--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,10 @@ plotly
 # panda-gym~=3.0.1
 wandb
 moviepy
+
+# added by niko32
+gymnasium[accept-rom-license]>=0.29.1
+huggingface_hub>=0.22.0
+huggingface_sb3>=3.0
+sb3_contrib>=2.2.1
+optuna>=3.6.0
